--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,4 @@ LazyData: true
 URL: https://github.com/chris-prener/prener
 BugReports: https://github.com/chris-prener/prener/issues
 RoxygenNote: 6.0.1
+Imports: ggplot2
