enable code coverage testing

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,4 +14,5 @@ BugReports: https://github.com/chris-prener/prener/issues
 RoxygenNote: 6.0.1
 Imports: ggplot2,
     dplyr
-Suggests: testthat
+Suggests: testthat,
+    covr
