--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@
 *.exe
 *.o
 *.so
-
 # Packages #
 ############
 # it's better to unpack these files and commit the raw source
@@ -24,7 +23,6 @@
 *.rar
 *.tar
 *.zip
-
 # Logs and databases #
 ######################
 *.log
@@ -38,7 +36,6 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
-
 # R files #
 ###########
 .Rproj.user
@@ -48,3 +45,4 @@ Thumbs.db
 .Ruserdata
 *.dcf
 *.ttc
+inst/doc
