add ggplot2 theme, rebuild site and update documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,10 @@
 export(cp_plotSave)
 export(cp_points)
 export(cp_probt)
+export(cp_sequoiaTheme)
 export(cp_texTable)
 export(cp_tidyTable)
 importFrom(dplyr,"%>%")
 importFrom(ggplot2,ggsave)
 importFrom(ggplot2,last_plot)
+importFrom(ggthemes,theme_foundation)
