--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,8 @@ URL: https://github.com/chris-prener/prener
 BugReports: https://github.com/chris-prener/prener/issues
 RoxygenNote: 6.0.1
 Imports: ggplot2,
-    dplyr
+    dplyr,
+    ggthemes
 Suggests: testthat,
     covr,
     knitr,
