--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,13 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
-language: R
+language: r
 sudo: false
 cache: packages
 
 r:
   - oldrel
   - release
+  - devel
 
 os:
   - linux
