--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,10 +20,23 @@ environment:
     WARNINGS_ARE_ERRORS: 1
 
   matrix:
+  - R_VERSION: devel
+    R_ARCH: x64
+
+  - R_VERSION: devel
+
+  - R_VERSION: patched
+    R_ARCH: x64
+
+  - R_VERSION: patched
+
   - R_VERSION: release
     R_ARCH: x64
 
   - R_VERSION: release
+
+  - R_VERSION: oldrel
+    R_ARCH: x64
 
   - R_VERSION: oldrel
 
