have packages built from source on r-devel in appveyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,9 +21,11 @@ environment:
 
   matrix:
   - R_VERSION: devel
+    PKGTYPE: source
     R_ARCH: x64
 
   - R_VERSION: devel
+    PKGTYPE: source
 
   - R_VERSION: patched
     R_ARCH: x64
