--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: prener
 Type: Package
 Title: Chris Prener's R Functions 
-Version: 0.1.0
+Version: 0.2.0
 Authors@R: person("Christopher", "Prener", email = "chris.prener@slu.edu",
                   role = c("aut", "cre"))
 Description: This package contains functions that I have written for my own work.
 Depends: R (>= 3.3.3)
-License: MIT + file LICENSE
+License: GPL-3 + file LICENSE
 Encoding: UTF-8
 LazyData: true
 URL: https://github.com/chris-prener/prener
