update imports for cp_breaks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(cp_texTable)
 export(cp_tidyTable)
 importFrom(classInt,classIntervals)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,mutate)
 importFrom(ggplot2,ggsave)
 importFrom(ggplot2,last_plot)
 importFrom(ggthemes,theme_foundation)
