add quasi-quotation to cp_breaks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,3 +10,8 @@ importFrom(dplyr,mutate)
 importFrom(ggplot2,ggsave)
 importFrom(ggplot2,last_plot)
 importFrom(ggthemes,theme_foundation)
+importFrom(rlang,":=")
+importFrom(rlang,enquo)
+importFrom(rlang,quo)
+importFrom(rlang,quo_name)
+importFrom(rlang,sym)
